cabal-version:   3.0
name:            yopencv
version:         0.1.0.0
license:         GPL-3.0-or-later
author:          james@hobson.space
maintainer:      James Hobson
build-type:      Simple
extra-doc-files: README.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  FRP.Yampa.OpenCV
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   src
    default-language: Haskell2010
